--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,44 @@
 }
 
 /**card styles**/
+#cardContainer{
+  overflow: scroll;
+  height: 100vh;
+}
+
+.card{
+  margin-top: 15px;
+}
+
+.card:hover{
+  cursor: pointer;
+  border: 1px solid #007bff;
+}
+
+.card a{
+  background-color: #555555;
+  padding: 5px 20px;
+  border-radius: 5px;
+  color: white;
+  border: 1px solid #555555;
+}
+
+.card a:hover{
+  color: white;
+  border: 1px solid #007bff;
+}
+
 #closingTime{
   color: #17a2b8;
+}
+
+#truckPhone{
+  color: #f7941e;
+}
+
+/**Map styles**/
+#initialScreen{
+  background-color: #888888;
+  height: 100vh;
+  padding-top: 50%;
 }
