--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,7 @@
 
 .card{
   margin-top: 15px;
+  width: 20rem;
 }
 
 .card:hover{
@@ -61,4 +62,24 @@
   background-color: #888888;
   height: 100vh;
   padding-top: 50%;
+}
+
+/**modal styles**/
+#fullDetailsBtn{
+  background-color: #555555;
+  padding: 5px 150px;
+  border-radius: 5px;
+  color: white;
+  border: 1px solid #555555;
+  text-decoration: none;
+}
+
+#fullDetailsBtn:hover{
+  color: white;
+  border: 1px solid #007bff;
+}
+
+#placeholderImage{
+  max-width: 100%;
+  height: auto;
 }
